# collaborative-video-ai-agents

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api_gateway/: Dockerfile  main.py
docs/adr/: 0000-template.md  0001-start-with-modular-architecture.md  0002-use-redis-streams-as-initial-event-bus.md  0003-prioritise-functional-mvp-before-optimisation.md
scripts/: debug_websocket_client.py  process_local_video.py
tests/: test_detection_schemas.py  test_event_schemas.py  test_health.py  test_local_streaming.py  test_project_setup.py  test_redis_client.py  test_redis_streams.py  test_video_annotation.py  test_video_processing.py  test_websocket.py
