[project]
name = "collaborative-video-ai-agents"
version = "0.1.0"
description = "Distributed real-time video analysis platform using collaborative AI agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Marc Montolío" }
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.8",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"